<project xmlns="http://maven.apache.org/POM/4.0.0" 
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>com.schneider.idms</groupId>
	<artifactId>schneider-idms-service</artifactId>
	<!-- <version>0.0.1-SNAPSHOT</version> -->
	<packaging>war</packaging>
	
	<parent>
		<groupId>com.schneider</groupId>
  		<artifactId>schneider-idms</artifactId>
		<relativePath>../schneider-idms/pom.xml</relativePath>
		<version>1.0</version>
	</parent>
	
	<properties>
	<sonar.host.url> http://localhost:9000/ </sonar.host.url>
		<cxf.version>3.0.0</cxf.version>
		<apache.httpcomponents.version>4.3.2</apache.httpcomponents.version>
		<spring.version>4.2.6.RELEASE</spring.version>
		<compileSource>1.8</compileSource>
		<!-- <version.jackson>2.5.0</version.jackson> -->
		<version.jackson>2.6.3</version.jackson>
		<!-- <version.jackson>2.5.0</version.jackson> -->
		<version.jsonpath>2.0.0</version.jsonpath>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.test.skip>true</maven.test.skip>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<finalName>IDMS</finalName>
	</build>

<!-- <repositories>
	<repository>
	   <id>forgerock-private-releases</id>
	   <url>https://maven.forgerock.org/repo/private-releases</url> 
	   <snapshots>
	      <enabled>false</enabled>
	   </snapshots>
	   
	</repository>
</repositories> -->

	<dependencies>

	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-aop</artifactId>
		<version>${spring.version}</version>
	</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-test</artifactId>
		    <version>${spring.version}</version>
		    <scope>test</scope>
		</dependency>
	<!-- slf4j -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>apache-log4j-extras</artifactId>
			<version>1.2.17</version>
   	 	</dependency>
		<dependency>
			<groupId>com.schneider.uims</groupId>
			<artifactId>schneider-uims-ws</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.schneider.idms</groupId>
  			<artifactId>schneider-idms-client</artifactId>
			<version>1.0</version>
		</dependency>
		
		<dependency>
			<groupId>com.schneider.idms</groupId>
			<artifactId>schneider-idms-cache-central</artifactId>
		</dependency>
			
		<!-- Apache CXF -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
			<version>${cxf.version}</version>
		</dependency>
		<!-- <dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-client</artifactId>
			<version>${cxf.version}</version>
		</dependency> -->
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-transports-http</artifactId>
			<version>${cxf.version}</version>
		</dependency>
		<!-- <dependency> <groupId>org.apache.cxf</groupId> <artifactId>cxf-rt-transports-http-jetty</artifactId> 
			<version>${cxf.version}</version> </dependency> -->

		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-security-cors</artifactId>
			<version>${cxf.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${version.jackson}</version>
			<scope>compile</scope> <!-- Required for Jackson Annotations for customised mapping -->
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
			<version>${version.jackson}</version>
			<scope>runtime</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-annotations</artifactId>
		    <version>${version.jackson}</version>
		   <!--  <version>2.0.1</version> -->
		</dependency>
		
		<dependency>  
		    <groupId>com.googlecode.json-simple</groupId>  
		    <artifactId>json-simple</artifactId>  
	   </dependency>  
		
		
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>${version.jsonpath}</version>
		</dependency>
		
		<!-- To Be Removed -->
		<dependency>
	        <groupId>org.apache.cxf</groupId>
	        <artifactId>cxf-rt-rs-extension-providers</artifactId>
	        <version>3.0.2</version>
	    </dependency>
	
	    <dependency>
	        <groupId>org.codehaus.jackson</groupId>
	        <artifactId>jackson-jaxrs</artifactId>
	        <version>1.9.0</version>
	    </dependency>
	    
	    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-jaxb-annotations -->
		<dependency>
		    <groupId>com.fasterxml.jackson.module</groupId>
		    <artifactId>jackson-module-jaxb-annotations</artifactId>
		    <version>2.8.7</version>
		</dependency>
	    
	    
	    <!-- To Be Removed -->

		<!-- Apache HTTP components for writing test client -->
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${apache.httpcomponents.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>${apache.httpcomponents.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>${apache.httpcomponents.version}</version>
			<scope>compile</scope>
		</dependency>

		<!-- Spring framework -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-service-description</artifactId>
			<version>${cxf.version}</version>
		</dependency>

		<!-- JavaEE API -->
		<!-- <dependency> 
			<groupId>org.hibernate</groupId> 
			<artifactId>hibernate-validator-annotation-processor</artifactId> 
			<version>4.1.0.Final</version> 
		</dependency> -->
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-validator</artifactId>
		    <version>5.1.3.Final</version>
		</dependency>
		<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<scope>compile</scope>
			</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
		   <groupId>javax.el</groupId>
		   <artifactId>javax.el-api</artifactId>
		   <version>2.2.4</version>
		</dependency>
		<dependency>
			<groupId>ma.glasnost.orika</groupId>
			<artifactId>orika-core</artifactId>
			<version>1.4.5</version>
			<exclusions>
				<!-- Causes conflict with Hibernate provided version which is deeper 
					in hierarchy but higher in version -->
				<exclusion>
					<groupId>org.javassist</groupId>
					<artifactId>javassist</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>javassist</groupId>
		    <artifactId>javassist</artifactId>
		    <version>3.12.1.GA</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>18.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
		<dependency>
		    <groupId>org.hamcrest</groupId>
		    <artifactId>hamcrest-all</artifactId>
		</dependency>
		
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.6.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jayway.restassured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>2.9.0</version>
            <scope>test</scope>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
		  <groupId>commons-codec</groupId>
		  <artifactId>commons-codec</artifactId>
		  <version>1.10</version>
		</dependency>
		
		<dependency>
	      <groupId>com.github.rholder</groupId>
	      <artifactId>guava-retrying</artifactId>
	      <version>2.0.0</version>
	    </dependency>
		<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
		<dependency>
		    <groupId>javax.activation</groupId>
		    <artifactId>activation</artifactId>
		    <version>1.1.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
		<dependency>
		    <groupId>javax.mail</groupId>
		    <artifactId>mail</artifactId>
		    <version>1.4</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-context-support</artifactId>
		    <version>${spring.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.sun.mail/smtp -->
		<!-- <dependency>
		    <groupId>com.sun.mail</groupId>
		    <artifactId>smtp</artifactId>
		    <version>1.4.2</version>
		</dependency> -->

		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu4j</artifactId>
			<version>60.2</version>
		</dependency>
		<dependency>
		    <groupId>com.detectlanguage</groupId>
		    <artifactId>detectlanguage</artifactId>
		    <version>1.0.6</version>
		</dependency>
		
	<!--   <dependency>
	    <groupId>org.forgerock.opendj</groupId>
	    <artifactId>opendj-ldap-sdk</artifactId>
	    <version>2.6.0</version>
	  </dependency>
			 -->
			 
		<dependency>
				<groupId>com.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>3.8</version>
		</dependency>

	</dependencies>
	<!-- <version>1.0</version> -->
	
	<profiles>
		<profile>
			<id>eclipse</id>
			<dependencies>
				<dependency>
					<groupId>com.schneider.idms</groupId>
					<artifactId>schneider-idms-app</artifactId>
					<version>1.0</version>
				</dependency>
			</dependencies>
		</profile>
	</profiles>
</project>